# mirror-studierstube

./: README.md
artoolkitplus/: ARToolKitPlus.pc.in  ARToolKitPlus.spec.in  CMakeLists.txt  SConstruct
artoolkitplus/debian/: README.Debian  changelog  control  copyright  rules
artoolkitplus/doc/: CMakeLists.txt
artoolkitplus/include/ARToolKitPlus/: ARToolKitPlus.h  Logger.h  MemoryManager.h  MemoryManagerMemMap.h  OS.h  Tracker.h  TrackerImpl.h  TrackerImpl.ipp  TrackerMultiMarker.h  TrackerMultiMarkerImpl.h  TrackerMultiMarkerImpl.ipp  TrackerSingleMarker.h  TrackerSingleMarkerImpl.h  TrackerSingleMarkerImpl.ipp  ar.h  arBitFieldPattern.h  config.h  matrix.h  param.h  vector.h
artoolkitplus/sample/: CMakeLists.txt
artoolkitplus/sample/multi/: CMakeLists.txt  multi.pro
artoolkitplus/sample/simple/: CMakeLists.txt  simple.pro
artoolkitplus/src/: CMakeLists.txt  CameraImpl.cxx  DLL.cpp  MemoryManager.cpp  MemoryManagerMemMap.cpp  src.pro
artoolkitplus/src/core/: byteSwap.cxx  matrix.cxx  vector.cxx
artoolkitplus/src/extra/: BCH.cxx  FixedPoint.cpp  Profiler.cpp
artoolkitplus/src/librpp/: arGetInitRot2Sub.cpp  librpp.cpp  rpp.cpp  rpp_quintic.cpp  rpp_svd.cpp  rpp_vecmat.cpp
artoolkitplus/tools/IdPatGen/: IdPatGen.pro
opentracker/: CMakeLists.txt  ENV.VAR  FindOpenTracker.cmake  INSTALL  INSTALL_win32.txt  NEWS  README  README.Debian  SConstruct  SconsWin  TODO  bootstrap  config.h.in  config_win.h.bak  default.py  makedist.sh  opentracker.pc.in  scons-alternative  scons-minimal  scons-msvc2005  scons-otstubs  scons-presenccia  sconstruct.old
opentracker/builders/: CLSBuilder.py  CSharpBuilder.py  IDLJBuilder.py  JarBuilder.py  JavaShellScript.py  JavacBld.py  MakeDefFile.py  OmniIdlCxx.py  OmniIdlPy.py  PyDocBuilder.py  __init__.py
opentracker/debian/: changelog  control  copyright  rules  rulesqt3
opentracker/doc/: BUILD_SYSTEM_HOWTO.txt  ChangeLog.2000  ChangeLog.2001  ChangeLog.2002  VirtualKeyCodesInHex.txt  build_and_clean_doxygen.bat  changes.txt  contributions.txt  footer.php  header.php  index.php  install.php  integrationguide.php  intersense.txt  left.php  libs.php  multimodalguide.php  opentracker.dxy  opentracker_local.dxy  opentracker_site.dxy  ot3.css  otqt_manual.h  overview.php  progguide.php  qt3-doc.tag  reconfigurationguide.php  title.php  userguide.php
opentracker/examples/CallbackCallforwardExampleConsole/: cbcfexample.cxx  clientA.xml  clientB.xml
opentracker/examples/CallbackCallforwardExampleQt/: cbcfmainwindow.cpp  cbcfmainwindow.h  cbcfmainwindow.ui  cbcfotexample.pro  clientB.xml  clientLocal.xml  main.cpp  opentrackerthread.cpp  opentrackerthread.h
opentracker/examples/CallbackExample/: test.cxx  test.dsp
opentracker/examples/ThreadContextExample/: arena.cpp  arena.h  axes.cpp  axes.h  checkerfloor.cpp  checkerfloor.h  clientA.xml  clientLocal.xml  dilatedrect.cpp  dilatedrect.h  goal.cpp  goal.h  main.cpp  paddle.cpp  paddle.h  playingfield.cpp  playingfield.h  ponghelp.h  pongscene.cpp  pongscene.h  pongview.cpp  pongview.h  poseable.cpp  poseable.h  puck.cpp  puck.h  tctxmainwindow.cpp  tctxmainwindow.h  tctxmainwindow.ui  threadcontextexample.pro
opentracker/examples/TorqueAdapter/: otObject.cc  otObject.h  otObjectLib.pro
opentracker/examples/interfacingOpenTracker/: otObject.cc  otObject.h  otinterface.xml
opentracker/extras/: Makefile.am  README.TXT
opentracker/extras/intersense/: Makefile.am  README.TXT  dll_api.doc  isense.c  isense.h  main.c  types.h
opentracker/extras/newmat10/: Makefile.am  include.h  (+3 more)
opentracker/idl/: EventChannelAdmin.idl  OTGraph.idl  OT_CORBA.idl  OT_EventChannel.idl  Shared.idl
opentracker/redhat/: opentracker.spec.in
opentracker/share/: ButtonTest.xml  CMakeLists.txt  ICubeXPresets.ini  Makefile.am  art4cam.xml  art4cam_pip_only.xml  art4cam_unicast.xml  art4camicg_client.xml  artTracker_c3d.xml  artTracker_c3d_unicast.xml  artlocal.xml  cube.xml  cube2.xml  debug.xml  dsvl.xml  dwarf.xml  faustflocktracker.xml  ioTracker_c3d.xml  ipcityUIclient.xml  ipcityUIserver.xml  linmouse.xml  linmouse2.xml  linmousegeneric.xml  magnetic.xml  midi.xml  midi2.xml  mlabplustest1.xml  mlabplustest7.xml  mlabplustest8.xml  mobilabtest1.xml  mobilabtest2.xml  mobilabtest2_client.xml  mobilabtest3.xml  mobilabtest4.xml  mobilabtest5.xml  mobilabtest6.xml  mobilabtest7.xml  mobilabtest7_client.xml  mobilabtest_client.xml  mobilabtestfloat.xml  (+44 more)
opentracker/src/: CMakeLists.txt  Makefile.am  Makefile.common  SConscript
opentracker/src_python/: elliptical_motion.py  entity_uri.py  naming.py  omniEventUtils.py  omniORBUtils.py  pushcons.py  shared_engine.py  simple_sink.py  simple_source.py  test_live01.py  test_live02.py
opentracker/tools/: OT_load.m  gmobilabtest.py  mirrorpatterns.py  readOpenTracker.cxx  regcalcs.mws
openvideo/: AUTHORS  CMakeLists.txt  ENV.VAR  FindOpenVideo.cmake  INSTALL_win32.txt  README  SConstruct  SConstruct.old  openvideo.pc.in  openvideo.spec.in
openvideo/data/: ffmpeg_test.xml  openVideo.xml  openVideo_DSVL.xml  openVideo_Image.xml  openvideo_OpenCV.xml  testOpenVideo.xml  test_xvid.avi  v4l_test1.xml  v4l_test2.xml  v4l_test3.xml  v4l_test4.xml  v4l_test5.xml  v4l_test6.xml  v4l_test8.xml  v4l_test9.xml
openvideo/debian/: README.Debian  changelog  control  copyright  dirs  docs  libopenvideo1-dev.install  libopenvideo1-doc.install  libopenvideo1.install  rules
openvideo/doc/: changes.txt  contributions.txt  main_page.txt  openvideo.dxy  stb.css
openvideo/src/: CMakeLists.txt  SConscript
openvideo/standalone/: CMakeLists.txt  SConstruct  buildutils.py  main.cxx
studierstube/: CMakeLists.txt  CTestConfig.cmake  ENV.VAR  INSTALL  INSTALL_win32.txt  SConstruct  SConstruct.new  SConstruct.old  build_and_clean_doxygen.bat  generate_doxygen.bat  makedist.sh  stb4.pc.in  studierstube.spec.in
studierstube/debian/: changelog  control  copyright  docs  rules  shlibs.local.ex  studierstube-doc.dirs  studierstube-doc.install
studierstube/doc/: studierstube_v4.dox
studierstube/include/: SConscript
studierstube/src/: CMakeLists.txt  SConscript
(+1097 files in other folders)
