FILE(GLOB multi_SOURCES src/*.cpp)
INCLUDE_DIRECTORIES(../../include)
ADD_EXECUTABLE(multi ${multi_SOURCES})
TARGET_LINK_LIBRARIES(multi ARToolKitPlus GL)
INSTALL(TARGETS multi DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(DIRECTORY data DESTINATION ${CMAKE_INSTALL_DATADIR}/${CPACK_PACKAGE_NAME}/sample/multi PATTERN ".svn" EXCLUDE)
