FILE(GLOB simple_SOURCES src/*.cpp)
INCLUDE_DIRECTORIES(../../include)
ADD_EXECUTABLE(simple ${simple_SOURCES})
TARGET_LINK_LIBRARIES(simple ARToolKitPlus GL)
INSTALL(TARGETS simple DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(DIRECTORY data DESTINATION ${CMAKE_INSTALL_DATADIR}/${CPACK_PACKAGE_NAME}/sample/simple PATTERN ".svn" EXCLUDE)
