include $(top_srcdir)/src/Makefile.common

noinst_LTLIBRARIES = libnewmat.la

libnewmat_la_SOURCES = \
	bandmat.cpp cholesky.cpp evalue.cpp fft.cpp hholder.cpp \
	jacobi.cpp myexcept.cpp newfft.cpp newmat1.cpp newmat2.cpp newmat3.cpp \
	newmat4.cpp newmat5.cpp newmat6.cpp newmat7.cpp newmat8.cpp newmat9.cpp \
	newmatex.cpp newmatrm.cpp sort.cpp submat.cpp svd.cpp

otextrasnewmat10incdir = $(otextrasincdir)/newmat10
otextrasnewmat10inc_HEADERS = \
	boolean.h \
	controlw.h \
	include.h \
	myexcept.h \
	newmatap.h \
	newmat.h \
	newmatio.h \
	newmatrc.h \
	newmatrm.h \
	precisio.h
