## Makefile.am -- Process this file with automake to produce Makefile.in

include $(top_srcdir)/src/Makefile.common

otcoreincdir = $(otincdir)/core
otcoreinc_HEADERS = \
	Event.h \
	EventAttribute.h \
	EventAttributeBase.h \
	Translator.h \
        ConfigNode.h \
        ConfigurationParser.h \
        Context.h \
        DOMTreeErrorReporter.h \
        EventQueueImplementation.h \
        MathUtils.h \
        Module.h \
        Node.h \
        NodeFactory.h \
        NodeFactoryContainer.h \
        NodePort.h \
        OSUtils.h \
        RefNode.h \
        StringTable.h \
        TestModule.h \
        TestSource.h \
        ThreadModule.h \
        VideoUser.h \
	iostream_ext.h

noinst_LTLIBRARIES = libcore.la
libcore_la_SOURCES = \
	Event.cxx \
	Event.h \
	EventAttribute.h \
	EventAttributeBase.cxx \
	EventAttributeBase.h \
	Translator.cxx \
	Translator.h \
        ConfigNode.h \
        ConfigurationParser.cxx \
        ConfigurationParser.h \
        Context.cxx \
        Context.h \
        DOMTreeErrorReporter.cxx \
        DOMTreeErrorReporter.h \
        EventQueueImplementation.cxx \
        EventQueueImplementation.h \
        MathUtils.cxx \
        MathUtils.h \
	Module.cxx \
        Module.h \
        Node.cxx \
        Node.h \
        NodeFactory.h \
        NodeFactoryContainer.cxx \
        NodeFactoryContainer.h \
        NodePort.h \
        OSUtils.cxx \
        OSUtils.h \
        RefNode.h \
        StringTable.cxx \
        StringTable.h \
        TestModule.cxx \
        TestModule.h \
        TestSource.h \
        ThreadModule.cxx \
        ThreadModule.h \
        VideoUser.h \
	iostream_ext.h
