## Makefile.am -- Process this file with automake to produce Makefile.in

include $(top_srcdir)/src/Makefile.common

otinputincdir = $(otincdir)/input
otinputinc_HEADERS = \
        ARTDataTrackerChomp.h \
        ARTDataTrackerModule.h \
        ARTDataTrackerSource.h \
        ARToolKitModule.h \
        ARToolKitMultiMarkerSource.h \
        ARToolKitPlusModule.h \
        ARToolKitSource.h \
        CyberMouseModule.h \
        CyberMouseSource.h \
        DGPSIP_Handler.h \
        DGPSMirror_Handler.h \
        DynaSightModule.h \
        DynaSightSource.h \
        FOBModule.h \
        FOBSource.h \
        FastTrakModule.h \
        FastTrakSource.h \
        GPSDirectionSource.h \
        GPSDriver.h \
        GPSGarminAltitude.h \
        GPSGarminCompass.h \
        GPSInfoSource.h \
        GPSModule.h \
        GPSParser.h \
        GPSSource.h \
        GPS_Handler.h \
        GoGoModule.h \
        GoGoSinkSource.h \
        InterSenseModule.h \
        InterSenseSource.h \
        JoystickModule.h \
        JoystickSource.h \
        LinmouseModule.h \
        LinmouseSource.h \
        MagicYModule.h \
        MagicYSource.h \
        MulticastInputModule.h \
        MulticastInputSource.h \
        OpenVideoModule.h \
        OrientationModule.h \
        OrientationSource.h \
        P5GloveModule.h \
        P5GloveSource.h \
        PanTiltUnitModule.h \
        PanTiltUnitSinkSource.h \
        ParButtonModule.h \
        ParButtonSource.h \
        RawInputModule.h \
        RawInputSource.h \
        SpaceDeviceModule.h \
        SpaceDeviceSource.h \
        SpeechCore.h \
        SpeechDef.h \
        SpeechInc.h \
        SpeechModule.h \
        SpeechSet.h \
        SpeechSource.h \
        SpeechVoice.h \
        SpeechVoiceModule.h \
        UbisenseModule.h \
        UbisenseSource.h \
        UltraTrakModule.h \
        UltraTrakSource.h \
        WacomGraphireModule.h \
        WacomGraphireSource.h \
        XSensModule.h \
        XSensSource.h

noinst_LTLIBRARIES = libinput.la
libinput_la_SOURCES = \
        ARTDataTrackerChomp.cxx \
        ARTDataTrackerChomp.h \
        ARTDataTrackerModule.cxx \
        ARTDataTrackerModule.h \
        ARTDataTrackerSource.h \
        ARToolKitModule.cxx \
        ARToolKitModule.h \
        ARToolKitMultiMarkerSource.h \
        ARToolKitPlusModule.cxx \
        ARToolKitPlusModule.h \
        ARToolKitSource.h \
        CyberMouseModule.cxx \
        CyberMouseModule.h \
        CyberMouseSource.h \
        DGPSIP_Handler.cxx \
        DGPSIP_Handler.h \
        DGPSMirror_Handler.cxx \
        DGPSMirror_Handler.h \
        DynaSightModule.cxx \
        DynaSightModule.h \
        DynaSightSource.h \
        FOBModule.cxx \
        FOBModule.h \
        FOBSource.h \
        FastTrakModule.cxx \
        FastTrakModule.h \
        FastTrakSource.h \
        GPSDirectionSource.h \
        GPSDriver.cxx \
        GPSDriver.h \
        GPSInfoSource.h \
        GPSModule.cxx \
        GPSModule.h \
        GPSParser.cxx \
        GPSParser.h \
        GPSSource.h \
        GPS_Handler.cxx \
        GPS_Handler.h \
        GoGoModule.cxx \
        GoGoModule.h \
        GoGoSinkSource.cxx \
        GoGoSinkSource.h \
        InterSenseModule.cxx \
        InterSenseModule.h \
        InterSenseSource.h \
        JoystickModule.cxx \
        JoystickModule.h \
        JoystickSource.h \
        LinmouseModule.cxx \
        LinmouseModule.h \
        LinmouseSource.h \
        MagicYModule.cxx \
        MagicYModule.h \
        MagicYSource.h \
        MulticastInputModule.cxx \
        MulticastInputModule.h \
        MulticastInputSource.h \
        OpenVideoModule.h \
        OrientationModule.cxx \
        OrientationModule.h \
        OrientationSource.h \
        P5GloveModule.cxx \
        P5GloveModule.h \
        P5GloveSource.h \
        PanTiltUnitModule.cxx \
        PanTiltUnitModule.h \
        PanTiltUnitSinkSource.cxx \
        PanTiltUnitSinkSource.h \
        ParButtonModule.cxx \
        ParButtonModule.h \
        ParButtonSource.h \
        RawInputModule.cxx \
        RawInputModule.h \
        RawInputSource.cxx \
        RawInputSource.h \
        SpaceDeviceModule.cxx \
        SpaceDeviceModule.h \
        SpaceDeviceSource.h \
        SpeechCore.cxx \
        SpeechCore.h \
        SpeechDef.h \
        SpeechInc.h \
        SpeechModule.cxx \
        SpeechModule.h \
        SpeechSet.cxx \
        SpeechSet.h \
        SpeechSource.cxx \
        SpeechSource.h \
        SpeechVoice.cxx \
        SpeechVoice.h \
        SpeechVoiceModule.cxx \
        SpeechVoiceModule.h \
        UbisenseModule.cxx \
        UbisenseModule.h \
        UbisenseSource.cxx \
        UbisenseSource.h \
        UltraTrakModule.cxx \
        UltraTrakModule.h \
        UltraTrakSource.h \
        WacomGraphireModule.cxx \
        WacomGraphireModule.h \
        WacomGraphireSource.h \
        XSensModule.cxx \
        XSensModule.h \
        XSensSource.cxx \
        XSensSource.h
