## Makefile.am -- Process this file with automake to produce Makefile.in

include $(top_srcdir)/src/Makefile.common

ottoolincdir = $(otincdir)/tool
ottoolinc_HEADERS = \
	FixWinCE.h \
	OT_ACE_Log.h \
	StringAligner.h \
	StringFixer.h \
	XMLSelection.h \
	disable4786.h

noinst_LTLIBRARIES = libtool.la
libtool_la_SOURCES = \
	OT_ACE_Log.cxx
