FILE(GLOB workspace_SOURCES *.cpp *.cxx)
INCLUDE_DIRECTORIES(../../include)

# Coin:
#INCLUDE_DIRECTORIES(${COIN_INCLUDE_DIR})
#ADD_DEFINITIONS(${COIN_DEFINITIONS})
#LINK_DIRECTORIES(${COIN_LINK_DIRECTORIES})

# ACE:
INCLUDE_DIRECTORIES(${ACE_INCLUDE_DIR})
ADD_DEFINITIONS(${ACE_DEFINITIONS})
LINK_DIRECTORIES(${ACE_LINK_DIRECTORIES})

# TinyXML:
#INCLUDE_DIRECTORIES(${TINY_XML_INCLUDE_DIR})
#LINK_DIRECTORIES(${TINY_XML_LIBRARY_DIR})

ADD_EXECUTABLE(workspace ${workspace_SOURCES} ../base/string.cxx ../base/OS.cxx)
TARGET_LINK_LIBRARIES(workspace ${ACE_LIBRARIES})

INSTALL(TARGETS workspace DESTINATION ${CMAKE_INSTALL_BINDIR})
