FILE(GLOB stbkernel_SOURCES *.cpp *.cxx)
INCLUDE_DIRECTORIES(../../include)

# Coin:
INCLUDE_DIRECTORIES(${COIN_INCLUDE_DIR})
ADD_DEFINITIONS(${COIN_DEFINITIONS})
LINK_DIRECTORIES(${COIN_LINK_DIRECTORIES})

# ACE:
INCLUDE_DIRECTORIES(${ACE_INCLUDE_DIR})
ADD_DEFINITIONS(${ACE_DEFINITIONS})
LINK_DIRECTORIES(${ACE_LINK_DIRECTORIES})

# TinyXML:
INCLUDE_DIRECTORIES(${TINY_XML_INCLUDE_DIR})
LINK_DIRECTORIES(${TINY_XML_LIBRARY_DIR})

ADD_LIBRARY(stbkernel SHARED ${stbkernel_SOURCES})
TARGET_LINK_LIBRARIES(stbkernel ${COIN_LIBRARIES} ${TINY_XML_LIBRARY} ${ACE_LIBRARIES})

SET_TARGET_PROPERTIES(stbkernel PROPERTIES VERSION ${CPACK_PACKAGE_VERSION} SOVERSION ${CPACK_PACKAGE_VERSION_MAJOR})
INSTALL(TARGETS stbkernel DESTINATION ${CMAKE_INSTALL_LIBDIR})
